#  Default toolchain flags
#
#  Copyright 2022 MobSlicer152
#  This file is part of Purpl Engine
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#  limitations under the License.

config("compiler_defaults") {
  defines = []

  if (is_win) {
    asmflags = [
      "/Cp",
      "/Cx",
    ]
    cflags = [
      "/Zo",
      "/std:c17",
    ]
    ldflags = [
      "/subsystem:console",
    ]
  } else {
    cflags = [ 
      "-fPIC",
      "-fPIE",
      "-Wall",
      "-Wextra",
      # Pointer bullshittery is the whole point of C
      "-Wno-incompatible-pointer-types",
      "-Wno-incompatible-pointer-types-discards-qualifiers",
      "-std=c2x",
    ]
    ldflags = ["-fuse-ld=lld"]
  }

  if (is_debug) {
    defines += [ "PURPL_DEBUG=1" ]

    if (is_win) {
      asmflags += [
        "/Zd",
        "/Zi",
      ]
      cflags += [ "/Zi" ]
      ldflags += [ "/debug" ]
    } else {
      cflags += [ "-g" ]
    }
  } else {
    defines += [ "NDEBUG=1" ]

    if (is_win) {
      cflags += [
        "/O2",
        "/Oi",
      ]
    } else {
      cflags += [ "-O2" ]
    }
  }
}
